[project]
name = "pubmed-scrapper"
version = "0.1.0"
description = "CLI Tool to fetch PubMed papers"
authors = [
    {name = "Pabitra-p"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "lxml (>=5.3.1,<6.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "pubmed_scrapper.cli:main"
